--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<!--script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script-->
-		<script src="http://d1pna5l3xsntoj.cloudfront.net/scripts/hello_retail_runtime.js"></script>
+		<script src="https://d1pna5l3xsntoj.cloudfront.net/scripts/hello_retail_runtime.js"></script>
 		<!-- script type="text/javascript">
 			(function() {
 				var aws = document.createElement('script');
@@ -15,6 +15,5 @@
 	</head>
 	<body>
 		<input type="search"/>
-		<div id="results"></div>
 	</body>
 </html>
